--- a/B2CAuthBlazor/B2CAuthBlazor/B2CAuthBlazor.csproj
+++ b/B2CAuthBlazor/B2CAuthBlazor/B2CAuthBlazor.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3df80245-0875-4fad-8479-aeb480cf1e28</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
